Change Date to Posix, move css to static, fix tests, remove prod from webpack config, format date consistently, fix routes with prefix slash

--- a/src/static/elm-datepicker.css
+++ b/src/static/elm-datepicker.css
@@ -7,7 +7,8 @@
 .elm-datepicker--picker {
   position: absolute;
   border: 1px solid #CCC;
-  z-index: 10; }
+  z-index: 10;
+  background-color: white; }
 
 .elm-datepicker--picker-header,
 .elm-datepicker--weekdays {
@@ -19,7 +20,8 @@
 
 .elm-datepicker--prev-container,
 .elm-datepicker--next-container {
-  flex: 0 1 auto; }
+  flex: 0 1 auto;
+  cursor: pointer; }
 
 .elm-datepicker--month-container {
   flex: 1 1 auto;
@@ -40,6 +42,7 @@
 .elm-datepicker--prev,
 .elm-datepicker--next {
   border: 6px solid transparent;
+  background-color: inherit;
   display: block;
   width: 0;
   height: 0;
